add_subdirectory(global_local)
add_subdirectory(rvalueRef)
add_subdirectory(union)
add_subdirectory(list_initialization)
add_subdirectory(initializer_list)
add_subdirectory(constructor)
add_subdirectory(lambda)
add_subdirectory(constexpr)
add_subdirectory(move)
add_subdirectory(smart_ptr)
add_subdirectory(cast)
add_subdirectory(vector)
add_subdirectory(deque)
add_subdirectory(iterator)